# 2023-translator-back

./: .gitignore  README.md  main.py  pyproject.toml
app/model/: __init__.py  crud.py  database.py  models.py  schemas.py
app/model/mysql/: __init__.py  crud.py  models.py
app/route/: history.py  translate.py
app/routes/: history.py  translate.py
app/service/: history.py  translate.py
nmt/model/sentencepiece/: sp_model.en  sp_model.ko
