[tool.poetry]
name = "nmt-backend"
version = "0.1.0"
description = "Clone coding of Google Translate"
authors = ["Judy Choi <https://github.com/Judy-Choi>"]
readme = "README.md"
packages = [{include = "nmt_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
pymysql = "^1.1.0"
ctranslate2 = "^3.16.1"
opennmt-py = "^2.0"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
